--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="sidebar">
-        <img src="/images/logo.png" alt="logo">
+        <img src="images/logo.png" alt="logo">
         <h2>HELP THEM FOUNDATION</h2>
         <!-- redirect to payment page  -->
         <a href="https://rzp.io/l/tzMN98ClWc" class="donate">DONATE NOW</a>
