--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <div class="content">
         <h3>Our Community. Our Charity.</h3>
         <h5>One of the best feelings in the world is giving. The positive energy is contagious. With just one act of kindness, you can inspire others to go out and plant seeds of happiness through giving, too.“Remember that the happiest people are not those getting more, but those giving more.” We must give more in order to get more. It is the generous giving of ourselves that produces the generous harvest.</h5>
+        <img src="/images/emoji.png" alt="">
     </div>
 </body>
 </html>
